@@ -353,7 +353,7 @@ $js_messages['strGridEditFeatureHint'] = __('You can also edit most columns<br /
 $js_messages['strGoToLink'] = __('Go to link');
 $js_messages['strColNameCopyTitle'] = __('Copy column name');
 $js_messages['strColNameCopyText'] = __('Right-click the column name to copy it to your clipboard.');
-$js_messages['strShowDataRowLink'] = __('Show Data Row(s)');
+$js_messages['strShowDataRowLink'] = __('Show data row(s)');
 
 /* password generation */
 $js_messages['strGeneratePassword'] = __('Generate password');
